--- a/package.json
+++ b/package.json
@@ -7,8 +7,11 @@
     "arui-feather": "^12.9.2",
     "react": "^16.4.2",
     "react-dom": "^16.4.2",
+    "react-json-view": "^1.19.1",
+    "react-popup": "^0.9.3",
     "react-redux": "^5.0.7",
     "react-scripts": "1.1.4",
+    "reactjs-popup": "^1.1.4",
     "redux": "^4.0.0",
     "redux-thunk": "^2.3.0"
   },
